EX-PROJECTS/P2_AWS_LB_CONTROLLER/home-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-deployment
  labels:
    app: home-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: home-deploy
  template:
    metadata:
      labels: 
        app: home-deploy
    spec:
      containers:
      - name: home-deploy
        image: pavan73384/ecommerce:home
        ports:
        - containerPort: 80

---

apiVersion: v1
kind: Service
metadata:
  name: home-service
spec:
  selector: 
    app: home-deploy
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
