EX-PROJECTS/P2_AWS_LB_CONTROLLER/offer-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: offer-deployment
  labels:
    app: offer-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: offer-deploy
  template:
    metadata:
      labels:
        app: offer-deploy
    spec:
      containers:
      - name: offer-deploy
        image: pavan73384/ecommerce:service
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: offer-service
spec:
  selector:
    app: offer-deploy
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
