EX-PROJECTS/P2_AWS_LB_CONTROLLER/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservice-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:

      - path: /home
        pathType: Prefix
        backend:
          service:
            name: home-service
            port:
              number: 80
      - path: /offer
        pathType: Prefix
        backend:
          service:
            name: offer-service
            port: 
              number: 3000
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment-service
            port:
              number: 4000
